# GestionDeFincaAgricola-TUIApp

./: .gitignore  README.md  farm_data.txt  finca-agricola.cabal  project-info.json  tools.csv
.github/workflows/: ci.yml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: CV_EVIDENCE.md  IMPROVEMENT_ROADMAP.md  Proyecto Programado 2 - 2025 I.md  TECHNICAL_REVIEW.md
src/: Files.hi  Files.hs  Logic.hi  Logic.hs  Menu.hi  Menu.hs  Types.hi  Types.hs  UIUtils.hi  UIUtils.hs
test/: Spec.hs
