cabal-version:      3.0
name:               finca-agricola
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Antigravity
maintainer:         antigravity@google.com
extra-doc-files:    README.md
build-type:         Simple

executable finca-agricola
    main-is:          Main.hs
    other-modules:    Types, Logic, Files, Menu, UIUtils
    build-depends:    base ^>=4.17.2.1, time, directory
    hs-source-dirs:   src, app
    default-language: Haskell2010
    ghc-options:      -Wall
