cabal-version:      3.0
name:               finca-agricola
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Geovanni González Aguilar
maintainer:         geovanniga32@gmail.com
extra-doc-files:    README.md
build-type:         Simple

executable finca-agricola
    main-is:          Main.hs
    other-modules:    Types, Logic, Files, Menu, UIUtils
    build-depends:    base ^>=4.17.2.1, time, directory
    hs-source-dirs:   src, app
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite finca-tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Types, Logic
    build-depends:    base ^>=4.17.2.1, time, hspec, QuickCheck
    hs-source-dirs:   test, src
    default-language: Haskell2010
    ghc-options:      -Wall
